// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`reader golden files > renders invalid-attribute.json as its golden HTML 1`] = `
"<div>
<div role="group" aria-label="Unsupported content: heading" data-rte-island="">
</div>
<div role="note" data-rte-message="islands" lang="en-US">Some content is not supported here.</div>
</div>"
`;

exports[`reader golden files > renders the valid fixture blocks.json as its golden HTML 1`] = `
"<div dir="rtl">
<h1 dir="auto">Plan</h1>
<ol start="0" dir="auto">
<li dir="auto">
<p dir="auto">
</p>
<ul dir="auto">
<li dir="auto">
<p dir="auto">
<span data-rte-mention="">@<!-- -->Ada</span>
</p>
</li>
</ul>
</li>
</ol>
<div data-rte-column-break="" dir="auto">
</div>
<pre dir="auto">
<code>const a = 1;
	b();</code>
</pre>
<hr dir="auto"/>
<table>
<thead>
<tr dir="auto">
<th colSpan="2" rowspan="1" scope="col" dir="auto">
<p dir="auto">
</p>
</th>
</tr>
</thead>
<tbody>
<tr dir="auto">
<td colSpan="1" rowspan="1" dir="auto">
<p dir="auto">
</p>
</td>
<td colSpan="1" rowspan="1" dir="auto">
<blockquote dir="auto">
<p dir="auto">
</p>
</blockquote>
</td>
</tr>
</tbody>
</table>
<figure dir="auto">
<img alt="" dir="auto"/>
</figure>
<div data-rte-provider="youtube" dir="auto">
</div>
</div>"
`;

exports[`reader golden files > renders the valid fixture marks.json as its golden HTML 1`] = `
"<div lang="de-CH">
<p dir="auto">Grüezi <a href="https://frontify.com">
<span data-rte-color="brand.red">
<strong>Welt</strong>
</span>
</a>
<em>
<br/>
</em>
<mark>H</mark>
<sub>2</sub>
<span lang="en" dir="ltr">O 😀</span>
</p>
</div>"
`;

exports[`reader golden files > renders unknown-attribute.json as its golden HTML 1`] = `
"<div>
<p dir="auto">Warm words</p>
</div>"
`;

exports[`reader golden files > renders unknown-attribute.json as its golden HTML 2`] = `
"<div>
<p dir="auto">a</p>
</div>"
`;

exports[`reader golden files > renders unknown-mark.json as its golden HTML 1`] = `
"<div>
<p dir="auto">Plain <strong>sparkly</strong> end</p>
</div>"
`;

exports[`reader golden files > renders unknown-mark.json as its golden HTML 2`] = `
"<div>
<p dir="auto">a</p>
</div>"
`;

exports[`reader golden files > renders unknown-node.json as its golden HTML 1`] = `
"<div>
<div role="group" aria-label="Unsupported content: callout" data-rte-island="">
</div>
<div role="note" data-rte-message="islands" lang="en-US">Some content is not supported here.</div>
</div>"
`;

exports[`reader golden files > renders unknown-nodes.json as its golden HTML 1`] = `
"<div>
<p dir="auto">Before</p>
<div role="group" aria-label="Unsupported content: callout" data-rte-island="">Heads up &lt;b&gt;&amp;&lt;/b&gt;</div>
<ul dir="auto">
<li dir="auto">
<p dir="auto">Item</p>
<div role="group" aria-label="Unsupported content: poll" data-rte-island="">Deep</div>
</li>
</ul>
<div role="group" aria-label="Unsupported content" data-rte-island="">
</div>
<p dir="auto">Mood <span role="group" aria-label="Unsupported content: sticker" data-rte-island="">smile</span> and after</p>
<div role="group" aria-label="Unsupported content: embed3d" data-rte-island="">
</div>
<p dir="auto">After</p>
<div role="note" data-rte-message="islands" lang="en-US">Some content is not supported here.</div>
</div>"
`;

exports[`reader golden files > renders unsafe-url.json as its golden HTML 1`] = `
"<div>
<p dir="auto">a</p>
</div>"
`;
